# STM32KBD

./: .gitignore  .gitmodules  LICENSE  README.md
firmware/: CMakeLists.txt  README.md  config.cmake
firmware/cmake/: check_mcu.cmake  generic.cmake  setup_path.cmake
firmware/code/include/: config.h  debugging.h  gpio.h  hal.h  keycode.h  main.h  matrix.h  mem_addresses.h  stm32_it.h  stm32f4xx_hal_conf.h
firmware/code/src/: debugging.c  debugging.c.lst  gpio.c  gpio.c - Copy.lst  gpio.c.lst  hal.c  hal.c.lst  keycode.c  main.c  main.c.lst  stm32_hal_msp.c  stm32_hal_msp.c.lst  stm32_it.c  stm32_it.c.lst
firmware/doc/: HID Generic Desktop Page.txt
firmware/linker_scripts/: STM32F401RCTx_FLASH.ld
